added landing page and changed this into the index.html

--- a/index.html
+++ b/index.html
@@ -3,171 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script src="https://kit.fontawesome.com/c923bd6760.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/img/icon.jpg"/>
-    <title>Greek Beaches Memory Game</title>
+    <title>Document</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <header>
-        <!-- Credit for the code used for the navbar: https://getbootstrap.com/docs/4.0/components/navbar/-->
-        <nav class="navbar navbar-light justify-content-center" style="background-color: #343d47;">
-                <ul class="navbar-nav" id="nav-buttons">
-                    <li>
-                        <div class="button border button-2" id="restart-button">
-                            <div class="slide"></div>
-                            <a href="#">Restart</a>
-                        </div>
-                    </li>
-                    <li class="">
-                        <div class="button border button-2" id="music-btn">
-                            <div class="slide"></div>
-                            <a href="#">Music <i id="music-icon" class="fas fa-play"></i></a>
-                        </div>
-                    </li>
-                </ul>
-        </nav>
-    </header>
-    <!-- Navbar -->
-    <!-- Win Modal -->
-    <div class="modal fade" id="win-modal" data-show="true" tabindex="-1" role="dialog">
-        <div class="vertical-alignment-helper">
-            <div class="modal-dialog vertical-align-center" role="document">
-                <div class="modal-content">
-                <div class="modal-header text-center">
-                    <h5 class="modal-title w-100">Well Done!</h5>
-                </div>
-                <div class="modal-body text-center">
-                    <p id="win-text"></p>
-                </div>
-                <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
-                </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Win Modal -->
-    <!-- Game Over Modal -->
-    <div class="modal fade" id="game-over-modal" data-show="true" tabindex="-1" role="dialog">
-        <div class="vertical-alignment-helper">
-            <div class="modal-dialog vertical-align-center" role="document">
-                <div class="modal-content">
-                <div class="modal-header text-center">
-                    <h5 class="modal-title w-100">Time's Up!</h5>
-                </div>
-                <div class="modal-body text-center">
-                    <p>Unfortunately you ran out of time. Try again!</p>
-                </div>
-                <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="restart()">Start Again</button>
-                </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Game Over Modal -->
-    <!-- Card Game Container --> 
-    <section class="container-fluid game-container">
-        <!-- Counters -->
-        <div class="row justify-content-center" id="count-row">
-            <div class="count-button border">
-                <h2>Time: <span id="timer">60</span></h2>
-            </div>
-            <div class="count-button border">
-                <h2>Flips: <span id="counter">0</span></h2>
-            </div>
-        </div>
-        <!-- Counters -->
-        <!-- Card Game -->
-            <div class="col-12 game justify-content-center">
-                <div class="card">
-                    <img class="front" src=" " />
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                     <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-                <div class="card">
-                    <img class="front" src=" "/>
-                    <div class="back"></div>
-                </div>
-            </div>
-            <!-- Card Game -->
-    </section> 
-    <!-- Card Game Container -->
-    <!-- Footer -->
-    <footer class="container-fluid">
-        <div class="row text-center">
-            <div class="col-12">
-                <p>© Copyright | 
-                    <a href="https://github.com/kristinabog"><i class="fab fa-github-square"></i></a>
-                    <a href="https://www.linkedin.com/in/kristina-bogdanovic-407918202/"><i class="fab fa-linkedin"></i></a>
-                </p>
-            </div>
-        </div>
-    </footer> 
-    <!-- Footer -->
-    <!-- JS/JQuery -->
-    <script type="text/javascript" src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- JS/JQuery -->
+    
 </body>
 </html>
