add layout and styling to landing page

--- a/game.html
+++ b/game.html
@@ -16,13 +16,13 @@
         <nav class="navbar navbar-light justify-content-center" style="background-color: #343d47;">
                 <ul class="navbar-nav" id="nav-buttons">
                     <li>
-                        <div class="button border button-2" id="restart-button">
+                        <div class="button border button-2 button-width" id="restart-button">
                             <div class="slide"></div>
                             <a href="#">Restart</a>
                         </div>
                     </li>
                     <li class="">
-                        <div class="button border button-2" id="music-btn">
+                        <div class="button border button-2 button-width" id="music-btn">
                             <div class="slide"></div>
                             <a href="#">Music <i id="music-icon" class="fas fa-play"></i></a>
                         </div>
