--- a/game.html
+++ b/game.html
@@ -84,67 +84,67 @@
         <!-- Card Game -->
             <div class="col-12 game justify-content-center">
                 <div class="card">
-                    <img class="front" src=" " />
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                     <img class="front" src=" "/>
+                     <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
                 <div class="card">
-                    <img class="front" src=" "/>
+                    <img class="front" src=" " alt="Greek Beach"/>
                     <div class="back"></div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
     </footer> 
     <!-- Footer -->
     <!-- JS/JQuery -->
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
