added another sentence to the jumbotron

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                     The time starts running once you click on start the game.
                     Click on a card and try to find the other matching card.
                     Try and do it with the least amount of flips!
+                    You can also click the music button to bring you in a Greek mood.
                 </p>
                 <span class="d-inline d-sm-none"><br></span>
                 <div class="button border button-2" onclick="location.href='game.html';" style="cursor: pointer;">
                     <div class="slide"></div>
-                    <a href="game.html" stle="color: #fff!important;">Start the game</a>
+                    <a href="game.html">Start the game</a>
                 </div>
             </section>
     </div>
